<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.benj.training.BoundServiceActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleBinder"
        android:text="@string/titleBinder"
        android:textSize="@dimen/titleSize"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boundServiceStartButton"
        android:text="@string/boundServiceStartButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titleBinder"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boundGetResponse"
        android:text="@string/boundGetResponse"
        android:layout_below="@+id/boundServiceStartButton"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boundServiceResponseTV"
        android:text="@string/boundServiceResponseTV"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/boundGetResponse"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boundServiceDetachButton"
        android:text="@string/boundServiceDetachButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/boundServiceResponseTV"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleMessenger"
        android:text="@string/titleMessenger"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/boundServiceDetachButton"
        android:gravity="center_horizontal"
        android:textSize="@dimen/titleSize"
        />

<!--    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"

        />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startMessenger"
        android:text="@string/startMessenger"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titleMessenger"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/messengerResponse"
        android:text="@string/messengerResponse"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/startMessenger"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/example1"
        android:text="@string/example1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/messengerResponse"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clientCount"
        android:text=""
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/example1"
        />

</RelativeLayout>
