<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.benj.training.AuditorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/auditorTitle"
        android:text="@string/auditorTitle"
        android:gravity="center_horizontal"
        android:textSize="@dimen/titleSize"
        android:layout_alignParentTop="true"
        android:paddingBottom="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ETHeight"
        android:id="@+id/auditorName"
        android:text="@string/auditorName"
        android:gravity="center_vertical"
        android:layout_below="@+id/auditorTitle"
        android:layout_alignParentLeft="true"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="@dimen/ETHeight"
        android:id="@+id/auditorNameET"
        android:layout_toRightOf="@+id/auditorName"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/auditorTitle"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ETHeight"
        android:id="@+id/auditorFirstname"
        android:text="@string/auditorFirstname"
        android:gravity="center_vertical"
        android:layout_below="@+id/auditorName"
        android:layout_alignParentLeft="true"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ETHeight"
        android:id="@+id/auditorFirstnameET"
        android:layout_toRightOf="@+id/auditorFirstname"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/auditorName"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ETHeight"
        android:id="@+id/auditorNote1"
        android:text="@string/auditorNote1"
        android:gravity="center_vertical"
        android:layout_below="@+id/auditorFirstname"
        android:layout_alignParentLeft="true"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/auditorNote1ET"
        android:layout_toRightOf="@+id/auditorNote1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/auditorFirstname"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ETHeight"
        android:id="@+id/auditorNote2"
        android:text="@string/auditorNote2"
        android:gravity="center_vertical"
        android:layout_below="@+id/auditorNote1"
        android:layout_alignParentLeft="true"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/auditorNote2ET"
        android:layout_toRightOf="@+id/auditorNote2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/auditorNote1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ETHeight"
        android:id="@+id/auditorNote3"
        android:text="@string/auditorNote3"
        android:gravity="center_vertical"
        android:layout_below="@+id/auditorNote2"
        android:layout_alignParentLeft="true"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/auditorNote3ET"
        android:layout_toRightOf="@+id/auditorNote3"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/auditorNote2"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveAuditorButton"
        android:text="@string/saveAuditorButtonText"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/auditorNote3"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auditorBackButton"
        android:text="@string/auditorBackButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/saveAuditorButton"
        />


</RelativeLayout>
